# 3-python-package-5bigbooms

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml
brainrot_package/: __init__.py  brainrot_functions.py  main.py
src/brainrot/: __init__.py  __main__.py  brainrot_functions.py
tests/: test_brainrot.py
